--- a/src/Main.css
+++ b/src/Main.css
@@ -1,3 +1,6 @@
 main {
- display: flex;   
+ display: flex;
+ flex-wrap: wrap;  
+ /* flex-direction: column;  */
+ justify-content: space-around;
 }
