--- a/src/HornedBeast.css
+++ b/src/HornedBeast.css
@@ -1,5 +1,6 @@
 article {
     border: 1px solid gray;
+    border-radius: 10px;
     padding: 1vw;
     margin-bottom: 1vw;
     width: 10%;
@@ -10,7 +11,7 @@ article img {
     margin-bottom: .5em;
 }
 article p {
-    font-size: 11px;
+    font-size: .6em;
     margin: auto;
     display: inline-block;
     margin-bottom: 1rem;
@@ -24,6 +25,10 @@ article p:last-of-type:hover {
 }
 .article-button {
     margin: .1rem .1vw;
+}
+
+article h2{
+    font-size: .7em;
 }
 /* article Card {
     width: fit-content;
