added style for form label, select, option, and button

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,32 @@
 body {
-  background-color:darkgrey;
+  background-color:linen;
 }
 
 img {
   max-width: 200px;
   max-height: 200px;
+}
+
+form {
+  margin: 0.3em 0.3em;
+}
+
+form > div > label{
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0.3em 0.3em;
+}
+
+form > div > select{
+  font-size: 0.7em !important;
+  margin: 0.3em 0.3em;
+  max-width: 100px;
+}
+form > div > select > option{
+  font-size: 1em;
+}
+
+form > div > button{
+  margin: 0.3em 0.3em;
+  font-size: 0.7em !important;
 }
