--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,17 @@ form > div > label{
 form > div > select{
   font-size: 0.7em !important;
   margin: 0.3em 0.3em;
-  max-width: 100px;
+  max-width: 127px;
 }
 form > div > select > option{
-  font-size: 1em;
+  font-size: 0.7em;
 }
 
 form > div > button{
-  margin: 0.3em 0.3em;
+  margin: 0.5em 0.5em;
   font-size: 0.7em !important;
+}
+
+footer {
+  margin-top: 1em;
 }
